app/main-frame/main-frame.scss
@import "../css/app.scss";

// -------- Header styles --------
.main-frame-header {
  display: flex;
  width: 100%;
  justify-content: space-between;

  .icon-wrapper {
    width: 15%;
    display: flex;
    justify-content: center;
    .icon {
      width: 8vw;
      margin: 1rem;
    }
  }

  .main-header-title {
    max-width: 100%;
    display: flex;
    align-items: center;
    h1 {
      color: $kth-color-blue;
      font: $kth-font-title;
      font-weight: lighter;
      font-size: 500%;
    }
  }

  .main-header-clock {
    align-self: flex-end;
    color: $kth-color-blue;
    padding-right: 0.5rem;
  }
}

.header-border {
  width: 100%;
  height: 0.5%;
  background-color: $kth-color-blue;
}

// -------- Sidebar styles --------
.sidebar {
  position:relative;
  list-style: none;
  margin:0;
  padding:0;
  width:15%;
  float:left;

  .sidebar-item {
    font: $kth-font-title;
    font-size:120%;
    border-right:solid $kth-color-blue;
    border-bottom: 0.2rem solid $kth-color-blue;

    .icon {
      padding:1rem;
      text-align: center;
    }
  }
}

.sidebar-filler {
  height:100%;
  border-right:solid $kth-color-blue;
}

.contact_field {
    position:relative;
    font-size:120%;
    float: right;
    height:100%;
    width:15%;
    border-left:solid $kth-color-blue ;
    z-index:0;
    margin:0;
    box-sizing: border-box;

    .inner_contact_field {
      margin:1rem;
    }

    h2 {
      font: $kth-font-title;
      color: $kth-color-green;
    }
    .open-hrs {
      width:100%;
      span {
        text-align:right;
        float:right;
        margin-right:100px;
      }
    }
}

#footer {
  background: url("app/main-frame/images/footer.png");
  position:fixed;
  bottom:0;
  width:100%;
  height:2.5rem;   /* Height of the footer */
}

.absolute {
  z-index:0;
}

// ----------------

